# dreamer

./: .gitignore  CLAUDE.md  PLAN.md  README.md  brainstorm.md  pyproject.toml
asset_pipeline/: __init__.py  godot_import.py  postprocess.py  qa.py
asset_pipeline/providers/: __init__.py  local.py  openai_image.py
lab-template/.claude/commands/: kickstart.md
scripts/: smoke_live.py
skills/bootstrap/: knowledge.md  prompt.md
skills/evaluation/: knowledge.md  prompt.md
skills/gdd/: knowledge.md  prompt.md
tests/: conftest.py  test_manifest.py  test_pipeline.py  test_postprocess.py  test_style_bible.py
tools/: bootstrap_game.sh  check.sh
